Fixing styles on mobile

--- a/vue-app/src/assets/styles/css/styles.css
+++ b/vue-app/src/assets/styles/css/styles.css
@@ -95,7 +95,7 @@
   display: flex;
   flex-flow: column wrap;
   align-self: center;
-  margin-bottom: 20vh;
+  margin-bottom: 10vh;
   width: 85%;
   border-radius: 20px;
   padding: 25px;
@@ -135,6 +135,9 @@
   height: 100%;
 }
 
+#skills {
+  margin-bottom: 40px;
+}
 #skills .subtitle {
   margin: 0px;
   padding: 0px;
@@ -184,6 +187,7 @@
   border-radius: 20px;
   padding: 15px;
   min-height: 300px;
+  margin-bottom: 40px;
 }
 #projects img {
   width: 100%;
@@ -496,6 +500,7 @@
     display: flex;
     flex-flow: column wrap;
     margin-top: 5vh;
+    margin-bottom: 40px;
     height: auto;
   }
   #contact #different-ways-contact .contact-icon-wrap {
@@ -506,7 +511,7 @@
     height: auto;
     justify-content: center;
     align-items: center;
-    margin-bottom: 2vh;
+    margin-bottom: 5vh;
   }
   #contact #different-ways-contact .contact-icon-wrap a,
 #contact #different-ways-contact .contact-icon-wrap .contact-icons {
@@ -518,6 +523,12 @@
     transform: translate(0px, 0px);
     height: 20px;
   }
+  #contact #different-ways-contact .contact-icon-wrap:first-child {
+    margin-top: 3vh;
+  }
+  #contact #different-ways-contact .contact-icon-wrap:last-child {
+    margin-bottom: 2vh;
+  }
   #contact #email-sent,
 #contact #email-fail {
     top: 30vh !important;
@@ -526,6 +537,11 @@
   }
   #contact #tag-was-copied {
     bottom: -2vh !important;
+  }
+}
+@media screen and (max-width: 405px) {
+  .content {
+    width: 87.5% !important;
   }
 }
 /*
@@ -556,6 +572,7 @@ body {
   display: flex;
   flex-flow: row wrap;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .content {
@@ -630,13 +647,13 @@ body {
   right: -30px;
   z-index: -5;
   width: 100vw;
-  height: 102vh;
+  height: 103vh;
   overflow: hidden;
 }
 #bg .box {
   float: left;
   width: 9.7vw;
-  height: 10vh;
+  height: 10.5vh;
   border: 0.15vw solid #ffffff;
   border-radius: 15px;
 }
@@ -644,7 +661,7 @@ body {
 #options-buttons {
   display: flex;
   position: absolute;
-  top: 200px;
+  top: 50px;
   right: 0px;
   left: 0px;
   margin: auto;
