--- a/vue-app/src/assets/styles/scss/_home.scss
+++ b/vue-app/src/assets/styles/scss/_home.scss
@@ -37,7 +37,7 @@
     display: flex;
     flex-flow: column wrap;
     align-self: center;
-    margin-bottom: 20vh;
+    margin-bottom: 10vh;
     width: var.$main-width;
     border-radius: 20px;
     padding: 25px;
@@ -82,6 +82,7 @@
 }
 
 #skills {
+    margin-bottom: 40px;
 
     .subtitle{
         margin: 0px;
