--- a/vue-app/src/assets/styles/scss/_projects.scss
+++ b/vue-app/src/assets/styles/scss/_projects.scss
@@ -25,6 +25,7 @@
     border-radius: 20px;
     padding: 15px;
     min-height: 300px;
+    margin-bottom: 40px;
 
     img{
         width: var.$all-width;
