--- a/vue-app/src/assets/styles/scss/main.scss
+++ b/vue-app/src/assets/styles/scss/main.scss
@@ -38,6 +38,7 @@ body {
     display: flex;
     flex-flow: row wrap;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 .content{
@@ -112,13 +113,13 @@ body {
     right: -30px;
     z-index: -5;
     width: 100vw;
-    height: 102vh;
+    height: 103vh;
     overflow: hidden;
   
     .box {
         float: left;
         width: 10vw - 0.3vw;
-        height: 10vh;
+        height: 10.5vh;
         border: 0.15vw solid var.$second-color;
         border-radius: 15px;
     }
@@ -127,7 +128,7 @@ body {
 #options-buttons {
     display: flex;
     position:  absolute;
-    top: 200px;
+    top: 50px;
     right: 0px;
     left: 0px;
     margin: auto;
